--- a/Analysis of Algorithms IP1.ipynb
+++ b/Analysis of Algorithms IP1.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "#Code taken from https://www.pythoncentral.io/python-reverse-list-place/",
+    "#Code taken from https://www.pythoncentral.io/python-reverse-list-place/\n",
     "def reverseList(array):\n",
     "    \"\"\" Takes a list of objects and then reverses the order of objects\"\"\"\n",
     "    \n",
